# dns-latency-probe

./: .gitignore  .pre-commit-config.yaml  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  README.md  constraints.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: application-uml.md
examples/: 2026-04-16-20-53_google_report.md  2026-04-16-20-53_google_summary.json  2026-04-16-21-03_nextdns-tcp_report.md  2026-04-16-21-03_nextdns-tcp_summary.json  2026-04-19-20-24_192-168-4-1_nextdns-tcp_report.md  2026-04-19-20-24_192-168-4-1_nextdns-tcp_summary.json  2026-04-19-21-02_8-8-8-8_google_report.md  2026-04-19-21-02_8-8-8-8_google_summary.json  README.md  domains.txt
src/dns_latency_probe/: __init__.py  analysis.py  app.py  capture.py  cli.py  config.py  domains.py  matching.py  models.py  plotting.py  prometheus.py  query_worker.py  reporting.py  utils.py
tests/functional/: test_end_to_end.py
tests/unit/: test_analysis.py  test_app.py  test_capture.py  test_cli.py  test_config.py  test_domains.py  test_matching.py  test_plotting.py  test_prometheus.py  test_query_worker.py  test_rate_limiter.py  test_reporting.py
