[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dns-latency-probe"
version = "0.1.0"
description = "CLI tool to measure DNS response latency using Scapy"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "dns-latency-probe contributors" }]
dependencies = [
  "scapy>=2.5.0",
  "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "mypy>=1.11.2",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.2",
  "types-setuptools>=75.0.0.20240820",
]

[project.scripts]
dns-latency-probe = "dns_latency_probe.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4", "ARG", "RUF"]
ignore = ["ARG001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["scapy.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=src/dns_latency_probe --cov-report=term-missing"
testpaths = ["tests"]
filterwarnings = [
  "error::pytest.PytestUnhandledThreadExceptionWarning",
]
